force-app/main/default/objects/Insertion_Order__c/Insertion_Order__c.object-meta.xml
<CustomObject>
    <label>Insertion Order</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insertion Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>