force-app/main/default/objects/Insertion_Order__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insertion Orders</relationshipLabel>
    <relationshipName>Insertion_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>