force-app/main/default/objects/Insertion_Order__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>