force-app/main/default/objects/Insertion_Order__c/fields/Original_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Date__c</fullName>
    <label>Original Order Date</label>
    <type>Date</type>
</CustomField>