force-app/main/default/objects/Insertion_Order__c/fields/Revised_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Order_Date__c</fullName>
    <label>Revised Order Date</label>
    <type>Date</type>
</CustomField>