force-app/main/default/objects/Insertion_Order__c/fields/X3rd_Party_Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Ad_Server__c</fullName>
    <label>3rd Party Ad Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>